--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dash==2.13.0
 dash_bootstrap_components==1.5.0
 pandas==1.4.4
 plotly==5.9.0
+python-dotenv==1.0.0
 requests==2.28.1
 gunicorn
 dash-tools
